<resources>
    <string name="app_name">CryNet Enforcement &amp; Local Logistics</string>
    <string name="main_Title">CRYNET SYSTEMS</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_cancel">Abort</string>
    <string name="login_image_logo">Crynet Logo</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_login">The email or the password is not valid.</string>
    <string name="error_field_required">This field is required</string>
    <string name="GPUName">Global Policy Update</string>
    <string name="GPUActivated">A new Global Policy Update now in effect, click for more info.</string>
    <string name="tempTextShort">Loren Ipsum</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="tempEmpNo">00/0/000000</string>
    <string name="lblZona">ZONE: </string>
    <string name="empleadoImageDesc">Foto del Empleado</string>
    <string name="QRCodeDesc">Código QR del empleado</string>
    <string name="deptIconDesc">Icono de Departamento</string>
    <string name="lblTitle">Name</string>
    <string name="lblPayGrade">Pay Grade</string>
    <string name="lblLocation">City</string>
    <string name="lblRank">Rank</string>
    <string name="iconoRemitenteDesc">Icono del remitente</string>
    <string name="lblPara">Para </string>
    <string name="lblButtonVerDetalles">Ver detalles</string>
    <string name="btnResponder">Responder</string>
    <string name="btnReenviar">Reenviar</string>
    <string name="btnResponderTodos">Responder a todos</string>
    <string name="map_logo">Logo del menu de mapa</string>
    <string name="notImplemented">Función no implementada</string>
    <string name="main_email">Personal\nSpace</string>
    <string name="main_personal">Employees</string>
    <string name="main_wharehouse">Wharehouse</string>
    <string name="main_map">Map</string>
    <string name="main_keys">Keys</string>
    <string name="report_title">Send a Report to HQ</string>
    <string name="report_explain">Please explain concisely and precisely the report cause</string>
    <string name="report_write_here">Please write here the report</string>
    <string name="report_select">Select from this list the direct threat it presents</string>
    <string name="report_send">Send report</string>
    <string name="report_sanction">Keep in mind that sending invalid reports can result in sanctions</string>
    <string name="report_sent_info">Current location and user token are sent automatically   </string>
    <!-- No traducir, queda mejor así-->
    <string name="btnMailInbox">INBOX</string>
    <string name="btnMailSent">SENT</string>
    <string name="btnMailTasks">TASKS</string>
    <string name="btnMailGPUs">GPUs</string>
    <string name="btnMailMailDesc">Write Mail</string>
    <!-- No traducir, queda mejor así-->

    <string-array name="spnThreat">
        <item>BLANK</item>
        <item>GREEN</item>
        <item>BLUE</item>
        <item>AMBER</item>
        <item>RED</item>
        <item>BLACK</item>
        <item>COLDSILVER</item>
    </string-array>
</resources>