<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="10dp"
    style="@style/CrynetContainer">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="fill_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_zone"
                    style="@style/crynetLabelEmployee"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="0"
                    android:paddingTop="10dp"
                    android:text="@string/lblZona"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_zone"
                    style="@style/crynetLabelEmployee"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Main Building"
                    android:textSize="24sp"
                    tools:ignore="HardcodedText" />

                <Button
                    android:id="@+id/btn_next"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:background="@drawable/logo_blanco_alpha"
                    android:contentDescription="@null"/>

            </LinearLayout>

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/img_fotoEmpleado"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="125dp"
                    android:background="@drawable/white_border"
                    android:contentDescription="@string/empleadoImageDesc"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/txt_empNo"
                    style="@style/crynetLabelEmployee"
                    android:text="@string/tempEmpNo"
                    android:textAlignment="center"
                    android:textSize="24sp" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lbl_title"
                    style="@style/crynetLabelEmployee.Label"
                    android:text="@string/lblTitle" />

                <TextView
                    android:id="@+id/txt_title"
                    style="@style/crynetLabelEmployee"
                    android:text="@string/tempTextShort" />

                <TextView
                    android:id="@+id/lbl_paygrade"
                    style="@style/crynetLabelEmployee.Label"
                    android:text="@string/lblPayGrade" />

                <TextView
                    android:id="@+id/txt_paygrade"
                    style="@style/crynetLabelEmployee"
                    android:text="@string/tempTextShort" />

                <TextView
                    android:id="@+id/lbl_location"
                    style="@style/crynetLabelEmployee.Label"
                    android:text="@string/lblLocation" />

                <TextView
                    android:id="@+id/txt_location"
                    style="@style/crynetLabelEmployee"
                    android:text="@string/tempTextShort" />

                <TextView
                    android:id="@+id/lbl_rank"
                    style="@style/crynetLabelEmployee.Label"
                    android:text="@string/lblRank" />

                <TextView
                    android:id="@+id/txt_rank"
                    style="@style/crynetLabelEmployee"
                    android:text="@string/tempTextShort" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_QR"
                        android:layout_width="220dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/QRCodeDesc"
                        android:scaleType="fitXY" />

                    <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/img_dept"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@string/deptIconDesc"
                        tools:srcCompat="@tools:sample/avatars" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>
